--- a/public/support/support.html
+++ b/public/support/support.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Botiq Support</title>
-  <link rel="stylesheet" href="/public/support/support.css" />
+  <link rel="stylesheet" href="support.css" />
 </head>
 <body>
   <div class="container">
@@ -15,6 +15,6 @@
       <button id="gmailBtn">Use Gmail Website</button>
     </div>
   </div>
-  <script src="/public/support/support.js" defer></script>
+  <script src="support.js" defer></script>
 </body>
 </html>
